fix(a11y): darken color to be contrastive enough

--- a/sass/pages/manual.scss
+++ b/sass/pages/manual.scss
@@ -3,7 +3,7 @@
 :root {
     --sixteen-personalities-type-color: rgb(136, 97, 154);
     --disc-type-color: #2f5fa5;
-    --enneagram-type-color: #22d2a2;
+    --enneagram-type-color: #10654D;
 }
 
 .sixteen-personalities-type {
